# libbs

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
apps/: CMakeLists.txt
apps/src/: print_histogram.cpp  summary.cpp
docsrc/: references.bib
src/: aux.cpp  aux.h  common.cpp  common.h  describe.cpp  describe.h  histogram.cpp  histogram.h  simple_sample.cpp  simple_sample.h  str_manip.cpp  str_manip.h  vitter_a.cpp  vitter_a.h  vitter_d.cpp  vitter_d.h
test/: CMakeLists.txt
test/src/: print_histogram.cpp  print_stats.cpp  test_desc.cpp  test_histogram.cpp  test_simple_sample.cpp  test_str.cpp  test_vitter_a.cpp  test_vitter_d.cpp  test_vitter_d_speed.cpp
